--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         td {
             padding: 12px 15px;
             border-bottom: 1px solid #ecf0f1;
+            color: black; /* Oder verwende black für komplett schwarz */
         }
 
         tr:nth-child(even) {
@@ -145,12 +146,12 @@
         }
 
         .warning-box {
-            background: linear-gradient(135deg, #fd79a8, #e84393);
-            color: white;
+            background: white;
+            color: #2c3e50;
             padding: 15px;
             border-radius: 10px;
             margin: 15px 0;
-            border-left: 5px solid #fdcb6e;
+            border-left: 5px solid #e74c3c;
         }
 
         .success-box {
